Update theme-based splash screen and app logo

--- a/app/src/main/res/drawable/ic_fish.xml
+++ b/app/src/main/res/drawable/ic_fish.xml
@@ -9,33 +9,33 @@
         android:scaleX="0.5"
         android:scaleY="0.5">
         <path
-            android:fillColor="#00000000"
+            android:fillColor="#0000"
             android:pathData="m361.626,260.646s-85.615,-129.1 -178.024,-118.229c-92.409,10.872 -141.337,127.742 -141.337,127.742s44.846,46.204 100.563,61.153 91.05,13.59 153.566,-21.743c62.512,-35.333 156.283,-118.229 163.077,-127.742 6.795,-9.513 -20.384,40.769 -23.103,85.615 -2.718,44.846 10.872,92.409 10.872,92.409z"
             android:strokeWidth="6.7264996"
-            android:strokeColor="#000000" />
+            android:strokeColor="#159DFF" />
         <path
-            android:fillColor="#ffffff"
+            android:fillColor="#0000"
             android:pathData="m134.673,218.524c0,9.006 -6.693,16.308 -14.949,16.308 -8.256,0 -14.949,-7.301 -14.949,-16.308 0,-9.006 6.693,-16.308 14.949,-16.308 8.256,0 14.949,7.301 14.949,16.308z"
             android:strokeWidth="6.7264996"
-            android:strokeColor="#000000"
+            android:strokeColor="#0000"
             android:strokeLineCap="square" />
         <path
-            android:fillColor="#ffffff"
+            android:fillColor="#0000"
             android:pathData="m406.289,310.153c-20.131,-23.288 -37.302,-43.316 -38.158,-44.507 -1.316,-1.831 1.07,-4.238 15.478,-15.616 19.764,-15.608 53.178,-43.985 64.748,-54.988 4.437,-4.219 7.538,-6.401 6.958,-4.895 -22.127,57.397 -25.499,92.846 -14.14,148.683 1.43,7.031 2.402,12.983 2.159,13.226 -0.243,0.243 -16.913,-18.612 -37.044,-41.901z" />
         <path
-            android:fillColor="#ffffff"
+            android:fillColor="#0000"
             android:pathData="m110.902,228.775c-3.43,-3.43 -4.181,-5.28 -4.181,-10.297 0,-16.453 21.416,-19.749 25.627,-3.943 3.754,14.089 -11.48,24.205 -21.445,14.24z" />
         <path
-            android:fillColor="#ffffff"
+            android:fillColor="#159DFF"
             android:pathData="m176.176,334.099c-26.338,-4.032 -45.302,-9.902 -65.987,-20.427 -21.176,-10.774 -48.709,-30.071 -59.473,-41.683l-3.153,-3.402 4.128,-8.177c22.636,-44.842 58.356,-84.178 91.871,-101.172 44.614,-22.621 87.532,-15.876 137.53,21.616 20.225,15.166 50.532,46.444 69.576,71.804l7.144,9.513 -4.523,3.838c-5.909,5.014 -31.802,23.083 -43.919,30.647 -53.386,33.33 -90.992,43.903 -133.191,37.441zM132.75,232.682c12.888,-14.064 1.831,-36.763 -16.59,-34.059 -9.245,1.357 -16.801,13.554 -14.848,23.968 1.002,5.339 6.473,12.657 10.883,14.556 1.556,0.67 5.849,0.997 9.539,0.726 5.597,-0.411 7.425,-1.272 11.017,-5.191z"
             android:strokeWidth="6.794841"
-            android:strokeColor="#000000"
+            android:strokeColor="#159DFF"
             android:strokeLineCap="square" />
         <path
-            android:fillColor="#ffffff"
+            android:fillColor="#159DFF"
             android:pathData="m429.59,335.283c-31.296,-35.314 -60.774,-70.398 -60.226,-71.678 0.336,-0.788 11.062,-9.993 23.835,-20.457 12.772,-10.464 31.125,-25.966 40.783,-34.449 9.658,-8.483 17.794,-15.19 18.081,-14.902 0.287,0.287 -1.924,8.145 -4.912,17.462 -13.917,43.393 -16.064,75.97 -7.949,120.622 1.55,8.529 2.615,15.709 2.367,15.958 -0.248,0.248 -5.638,-5.402 -11.977,-12.556z"
             android:strokeWidth="6.794841"
-            android:strokeColor="#000000"
+            android:strokeColor="#159DFF"
             android:strokeLineCap="square" />
     </group>
 </vector>
